@@ -294,11 +294,12 @@ ACMD(do_bash)
     send_to_char(ch, "Aren't we funny today...\r\n");
     return;
   }
+  if (MOB_FLAGGED(vict, MOB_NOKILL)) {
+    send_to_char(ch, "This mob is protected.\r\n");
+    return;
+  }
   percent = rand_number(1, 101);	/* 101% is a complete failure */
   prob = GET_SKILL(ch, SKILL_BASH);
-
-  if (MOB_FLAGGED(vict, MOB_NOBASH))
-    percent = 101;
 
   if (percent > prob) {
     damage(ch, vict, 0, SKILL_BASH);
